# pharmacy-ai-newsletter-agent

./: .gitignore  README.md  export_langsmith_trace.py  pyproject.toml  requirements.txt  run_research_newsletter.py
outputs/: README.md  cds.md  incident.md
papers/: README.md
src/: __init__.py  document_profile.py  evidence_utils.py  logging_config.py  model_config.py  multi_agent_supervisor.py  pdf_processor.py  prompts.py  research_agent.py  research_agent_full.py  research_agent_scope.py  research_agent_storm.py  research_program_supervisor.py  state_multi_agent_supervisor.py  state_research.py  state_scope.py  templates.py  utils.py
